--- a/Registro.html
+++ b/Registro.html
@@ -36,7 +36,7 @@
 
      <br><br>
 
-     <label for="Pais">Pais:</label>
+     <label for="Pais">País:</label>
      <input type="text" name="Pais" id="Pais" size="25" maxlength="30">
 
      <br><br>
@@ -51,7 +51,7 @@
 
      <br><br>
 
-     <label for="CodigoPostal">Codigo postal:</label>
+     <label for="CodigoPostal">Código postal:</label>
      <input type="number" name="CodigoPostal" id="CodigoPostal" min="0" max="9999">
      <b id="codigo" style="font-size: 12px"></b>
 
@@ -72,12 +72,12 @@
 
      <br><br>
 
-     <label for="Telefono">Telefono:</label>
+     <label for="Telefono">Teléfono:</label>
      <input type="tel" name="Telefono" id="Telefono">
 
      <br><br>
 
-     <label for="Genero">Genero:</label>
+     <label for="Genero">Género:</label>
      <select name="Genero" id="Genero">
          <option value="Masculino">Masculino</option>
          <option value="Femenino">Femenino</option>
@@ -90,7 +90,7 @@
 
      <br><br>
 
-     <input type="checkbox" name="Condiciones" required><span>Acepto los terminos y condiciones</span>
+     <input type="checkbox" name="Condiciones" required><span>Acepto los términos y condiciones</span>
 
      <br><br>
 
