--- a/especificaciones.html
+++ b/especificaciones.html
@@ -22,7 +22,7 @@
 <br><br><br>
     <main>
         <div style="text-align: center;">
-            <img src="./img/leclerc-f175-1645111680.jpg" alt="Ferrari" width="50%">
+            <img class="f175" src="./img/leclerc-f175-1645111680.jpg" alt="Ferrari" width="50%">
         </div>
     <br>
     <h2><b>Ferrari F1-75</b></h2>
