--- a/pilotos.html
+++ b/pilotos.html
@@ -26,15 +26,15 @@
         <br><br>
      <div id="pilotos">
         <div style="text-align:center">
-            <img src="./img/charles-leclerc.jpg" alt="Leclerc" height="450" width="700">
-        </div>
+            <img class="piloto" src="./img/charles-leclerc.jpg" alt="Leclerc" height="450" width="700">
+        </div><br>
         <p style="text-align: justify;">Charles Leclerc nació en Montecarlo, Mónaco, el 16 de octubre de 1997. Fue miembro de la Academia de pilotos de Ferrari hasta 2018. Fue campeón de la GP3 Series en 2016 y de la Fórmula 2 al año siguiente. Debutó en Fórmula 1 con el equipo Alfa Romeo Sauber en 2018, y desde 2019 es piloto de la Scuderia Ferrari.</p>
         <br><br>
         <h2>Carlos Sainz</h2>
         <br><br>
         <div style="text-align:center">
-            <img src="./img/carlos-sainz-2.jpg" alt="Sainz" height="450" width="700">
-        </div>
+            <img class="piloto" src="./img/carlos-sainz-2.jpg" alt="Sainz" height="450" width="700">
+        </div><br>
         <p style="text-align:justify">Carlos Sainz nació en Madrid, España, el 1 de septiembre de 1994. En 2014 ganó el campeonato de Formula Renault 3.5 Series y debutó en Fórmula 1 al año siguiente con Toro Rosso. Desde 2021 es piloto de la Scuderia Ferrari. Es hijo del piloto y campeón del Campeonato Mundial de Rally Carlos Sainz.</p>
      </div> 
         <br><br>
