--- a/Sucursales.html
+++ b/Sucursales.html
@@ -24,9 +24,10 @@
 <main>
     <h2>Sucursales</h2>
 <p>Museo Ferrari: <a href="https://goo.gl/maps/L6t1krXuT1SQpRgL9">Mapa</a></p>
-<p>Fabrica Ferrari: <a href="https://goo.gl/maps/F6jdXXe72FQybZoF9">Mapa</a></p>
+<p>Fábrica Ferrari: <a href="https://goo.gl/maps/F6jdXXe72FQybZoF9">Mapa</a></p>
 <p>Tienda Oficial: <a href="https://g.page/motorsport-maranello-store?share">Mapa</a></p>
 <p>Oficinas: <a href="https://goo.gl/maps/o8BBz9ksSAEmVVTD6">Mapa</a></p>
+<br><br>
 <div id="mapas">
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2844.2905902888706!2d10.85934531548881!3d44.52968227910103!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4781e629e2ffffff%3A0x78dd8a4915609a5b!2sMuseo%20Ferrari!5e0!3m2!1ses-419!2sar!4v1648084917850!5m2!1ses-419!2sar" width="350" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2844.1458575513143!2d10.862302815488803!3d44.53264597910094!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x477fe3a75a0699a7%3A0xb1a1e710282361ef!2sFerrari%20Factory!5e0!3m2!1ses-419!2sar!4v1648085869323!5m2!1ses-419!2sar" width="350" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
