--- a/index.html
+++ b/index.html
@@ -29,7 +29,11 @@
         </div>
         <br>
         <p style="text-align: justify; margin: 10px;"><b>Scuderia Ferrari</b> es la división deportiva de automóviles Ferrari encargada de las competiciones de Fórmula 1. La primera participación de Ferrari en Fórmula 1 fue en el Gran Premio de Mónaco de 1950, con el Tipo 125 F1. Ferrari es considerado uno de los cuatro grandes equipos de Fórmula 1, junto con Williams, McLaren y Mercedes. Es el equipo activo más antiguo del campeonato, y es el que ha conseguido más victorias, campeonatos de pilotos (15) y campeonatos de constructores (16). Ha contado con muchos de los pilotos más destacados de la historia de la Fórmula 1 como Michael Schumacher, Niki Lauda, Juan Manuel Fangio, Alain Prost, Nigel Mansell, Gilles Villeneuve, Kimi Räikkönen, Sebastian Vettel y Fernando Alonso, entre otros. Los pilotos actuales son Carlos Sainz Jr y Charles Leclerc. El director del equipo es Mattia Binotto.</p>
-        <br><br><br><br>
+        <br><br><br>
+
+        <h2>Conocenos mejor</h2>
+
+        <br><br>
 
         <div class="fondoindex">
             <div>
