--- a/Registro.html
+++ b/Registro.html
@@ -28,18 +28,21 @@
 
      <label for="Nombre">Nombre:</label>
      <input type="text" name="Nombre" id="Nombre" size="25" maxlength="30" >
+     <b id="nomb" style="font-size:12px"></b>
 
-     <br><br>
+     <br>
 
      <label for="Apellido">Apellido:</label>
      <input type="text" name="Apellido" id="Apellido" size="25" maxlength="30" >
+     <b id="apell" style="font-size:12px"></b>
 
-     <br><br>
+     <br>
 
      <label for="Pais">País:</label>
      <input type="text" name="Pais" id="Pais" size="25" maxlength="30">
+     <b id="pa" style="font-size:12px"></b>
 
-     <br><br>
+     <br>
 
      <label for="Provincia">Provincia:</label>
      <input type="text" name="Provincia" id="Provincia" size="25" maxlength="30">
@@ -59,8 +62,9 @@
 
      <label for="DNI">DNI:</label>
      <input type="number" name="DNI" id="DNI" min="0" max="99999999" >
+     <b id="dn" style="font-size: 12px"></b>
 
-     <br><br>
+     <br>
 
      <label for="FechaDeNacimiento">Fecha de nacimiento:</label>
      <input type="date" name="FechaDeNacimiento" id="FechaDeNacimiento" >
