--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <div>
                 <div class="container">
                     <img class="imagen" src="./img/f1-ferrari-75.jpg" alt="Ferrari" height="450" width="700">
-                    <div class="middle">
+                    <div class="medio">
                         <div class="texto"><a href="./especificaciones.html">F1-75</a></div>
                     </div>
                 </div>
@@ -47,7 +47,7 @@
             <div>
                 <div class="container">
                     <img class="imagen" src="./img/ferrari-pilotos.jpg" alt="ferrari-pilotos" height="450" width="700">
-                         <div class="middle">
+                         <div class="medio">
                              <div class="texto"><a href="./pilotos.html">Pilotos</a></div>
                          </div>
                 </div>
